[gd_scene load_steps=7 format=3 uid="uid://djjo8nxvmqvfr"]

[ext_resource type="PackedScene" uid="uid://b432lstq4hbjh" path="res://Scenes/warrior_unit.tscn" id="1_1147a"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_fnpsa"]
[ext_resource type="Texture2D" uid="uid://eba5iic50rtd" path="res://Assets/BackgroundSample.png" id="2_5j77j"]
[ext_resource type="PackedScene" uid="uid://dvnlg3oco7q6q" path="res://Scenes/archer_unit.tscn" id="2_arn7n"]
[ext_resource type="PackedScene" uid="uid://cjgacmk1cs7um" path="res://Scenes/mage_unit.tscn" id="3_566yx"]
[ext_resource type="PackedScene" uid="uid://bytyvm327mtux" path="res://Scenes/tank_unit.tscn" id="4_nuu5h"]

[node name="Game" type="Node2D"]
script = ExtResource("1_fnpsa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(120, 64)
texture = ExtResource("2_5j77j")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(124, 62)
zoom = Vector2(5.5, 5.5)

[node name="Player" type="Node" parent="."]

[node name="MageUnit" parent="Player" groups=["entities"] instance=ExtResource("3_566yx")]
position = Vector2(42, 93)
in_team = true

[node name="TankUnit" parent="Player" groups=["entities"] instance=ExtResource("4_nuu5h")]
position = Vector2(76, 64)
in_team = true

[node name="WarriorUnit" parent="Player" groups=["entities"] instance=ExtResource("1_1147a")]
position = Vector2(45, 40)
in_team = true

[node name="Enemy" type="Node" parent="."]

[node name="ArcherUnit" parent="Enemy" groups=["entities"] instance=ExtResource("2_arn7n")]
position = Vector2(190, 41)

[node name="TankUnit2" parent="Enemy" groups=["entities"] instance=ExtResource("4_nuu5h")]
position = Vector2(160, 72)

[node name="ArcherUnit2" parent="Enemy" groups=["entities"] instance=ExtResource("2_arn7n")]
position = Vector2(191, 95)
